fix: fix overflow task description

--- a/src/components/Task/styles.css
+++ b/src/components/Task/styles.css
@@ -3,16 +3,14 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 90px;
+  min-height: 90px;
   font-size: 20px;
   background-color: white;
   border-radius: 8px;
   text-align: start;
+  flex-wrap: wrap;
+  padding: 20px 0px;
   box-shadow: 0px 3px 2px -2px rgba(102, 102, 102, 0.904);
-}
-
-.task-container p {
-  display: inline-block;
 }
 
 .task-container p::first-letter {
@@ -59,4 +57,21 @@
   margin-left: 10px;
   margin-right: 20px;
   accent-color: #444791;
+}
+
+.task-start {
+  display: flex;
+  flex-direction: row;
+  vertical-align: baseline;
+  align-items: center;
+  width: 85%;
+}
+
+.task-description {
+  word-break: break-all;
+}
+
+.task-options-buttons {
+  min-height: 30px;
+  min-width: 130px;
 }
